Project

General

Profile

Actions

Bug #9674

closed

Segfault when marshaling Queue

Bug #9674: Segfault when marshaling Queue

Added by splattael (Peter Leitzen) over 12 years ago. Updated about 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.1.1p76 (2014-02-24 revision 45161) [x86_64-linux]
[ruby-core:61677]

Description

Marshaling Queue segfaults on ruby 2.1.1p76 (see attachment)

ruby -e 'Marshal.dump(Queue.new)'

(It also segfaults for ruby 2.2.0dev (2014-03-25 trunk 45407) [x86_64-linux])

This core dump occurs when using RindgyDingy with DRb which marshals Queue.

On Ruby ruby 1.9.3p429 (2013-05-15 revision 40747) [x86_64-linux] it failed with:

$ ruby -e 'Marshal.dump(Queue.new)' 
-e:1:in `dump': no _dump_data is defined for class Mutex (TypeError)
        from -e:1:in `'

Files

marshal_dump_queue-2.1.1.txt (11.2 KB) marshal_dump_queue-2.1.1.txt Core dump for 2.1.1p76 splattael (Peter Leitzen), 03/25/2014 03:30 PM
marshal_dump_queue-2.2.0.txt (11 KB) marshal_dump_queue-2.2.0.txt Core dump for 2.2.0dev splattael (Peter Leitzen), 03/25/2014 03:32 PM

Related issues 1 (0 open — 1 closed)

Has duplicate Ruby - Bug #10190: Segmentation fault when Thread::Queue#push is called through dRubyClosedActions
Actions

Also available in: PDF Atom